--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-leaf-carousel": "^2.0.0",
+    "react-multi-carousel": "^2.5.5",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
